# libslob

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  out  slob.py
include/: compression.h  dict.h  dictionary.h  iteration.h  slob.h  ui.h
src/: compression.cpp  dict.cpp  dictionary.cpp  main.cpp  slob.cpp  ui.cpp
test/: test.cpp
tests/: main.cpp
